--- a/code/practice_imports.ipynb
+++ b/code/practice_imports.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrEFlmsLGIcnXbGaAHMd8u",
+      "authorship_tag": "ABX9TyMpnb9G8xYxLcmfVuhKtOC8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,6 +60,29 @@
           },
           "metadata": {},
           "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"BMS 225A\")"
+      ],
+      "metadata": {
+        "id": "d5Baaa7XsGeP",
+        "outputId": "396dd860-ec02-4139-eeb7-c6f13c13fcc0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "BMS 225A\n"
+          ]
         }
       ]
     }
